--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@ai-sdk/react": "^1.2.12",
     "@clerk/nextjs": "^6.21.0",
     "@convex-dev/persistent-text-streaming": "^0.2.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "ai": "^4.3.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.24.8",
+    "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "openai": "^5.3.0",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.25.58"
   },
   "devDependencies": {
@@ -35,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
