--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/nextjs": "^6.21.0",
     "@convex-dev/persistent-text-streaming": "^0.2.3",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/typography": "^0.5.16",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,6 +29,7 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.58"
   },
