--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "convex": "^1.24.8",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "openai": "^5.3.0",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.58"
   },
