--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@convex-dev/persistent-text-streaming": "^0.2.3",
     "@icons-pack/react-simple-icons": "^13.1.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
