--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.58"
   },
   "devDependencies": {
