--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@clerk/nextjs": "^6.21.0",
     "@convex-dev/persistent-text-streaming": "^0.2.3",
     "@icons-pack/react-simple-icons": "^13.1.0",
+    "@openrouter/ai-sdk-provider": "^0.7.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
